Fix logo size for proper nav alignment

--- a/styles.css
+++ b/styles.css
@@ -120,9 +120,9 @@ nav {
 }
 
 .logo img {
-    height: 80px;
+    height: 50px;
     width: auto;
-    max-width: 300px;
+    max-width: 200px;
 }
 
 .nav-links {
@@ -1581,7 +1581,7 @@ footer {
     }
     
     nav .logo img {
-        height: 50px;
+        height: 40px;
     }
     
     /* Hero Section */
